<resources>
    <string name="app_name">Tugas 10</string>
    <string name="back_button">back button</string>
    <string name="ayo_buat_akunmu">Ayo buat akunmu</string>
    <string name="nama_lengkap">nama lengkap</string>
    <string name="alamat_email">alamat email</string>
    <string name="kata_sandi">kata sandi</string>
    <string name="password_visibility">password visibility</string>
    <string name="konfirmasi_kata_sandi">konfirmasi kata sandi</string>
    <string name="daftar">Daftar</string>
    <string name="selamat_datang">Selamat datang</string>
    <string name="lupa_kata_sandi">lupa kata sandi?</string>
    <string name="masuk">Masuk</string>
    <string name="tidak_punya_akun">tidak punya akun</string>
</resources>