<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="16dp"
    android:paddingHorizontal="16dp"
    android:background="#945DE3"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/back_button" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_android_black_24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/ayo_buat_akunmu"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@id/img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/input_field"
        android:hint="@string/nama_lengkap"
        android:paddingStart="32dp"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlSymmetry"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_field"
        android:hint="@string/alamat_email"
        android:paddingStart="32dp"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/edt_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlSymmetry"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/edt_pass"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_field"
        android:hint="@string/kata_sandi"
        android:paddingStart="32dp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/edt_email"
        app:layout_constraintStart_toStartOf="@id/edt_email"
        app:layout_constraintEnd_toEndOf="@id/edt_email"
        tools:ignore="RtlSymmetry"
        android:autofillHints="password"/>

    <ImageView
        android:id="@+id/pass_visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_baseline_visibility_off_24"
        app:layout_constraintTop_toTopOf="@id/edt_pass"
        app:layout_constraintEnd_toEndOf="@id/edt_pass"
        app:layout_constraintBottom_toBottomOf="@id/edt_pass"
        android:contentDescription="@string/password_visibility" />

    <EditText
        android:id="@+id/edt_pass_confirm"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_field"
        android:hint="@string/konfirmasi_kata_sandi"
        android:paddingStart="32dp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/edt_pass"
        app:layout_constraintStart_toStartOf="@id/edt_pass"
        app:layout_constraintEnd_toEndOf="@id/edt_pass"
        tools:ignore="RtlSymmetry"
        android:autofillHints="password"/>

    <ImageView
        android:id="@+id/pass_confirm_visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_baseline_visibility_off_24"
        app:layout_constraintTop_toTopOf="@id/edt_pass_confirm"
        app:layout_constraintEnd_toEndOf="@id/edt_pass_confirm"
        app:layout_constraintBottom_toBottomOf="@id/edt_pass_confirm"
        android:contentDescription="@string/password_visibility" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn"
        android:text="@string/daftar"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/edt_pass_confirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>